Fix buttons align

--- a/style.css
+++ b/style.css
@@ -47,8 +47,7 @@ h1{
     text-align: center;
     justify-content: space-between;
     padding: 5px 0;
-    gap: 20px;
-    min-width: 400px;
+    min-width: 450px;
     min-height: 50px;
     font-size: 32px;
 }
@@ -184,7 +183,10 @@ h1{
         min-height: 300px;
         font-size: 42px;
     }
-
+    .controls{
+        min-width: 400px;
+        gap: 20px;
+    }
     .controls>button{
         font-size: 24px;
     }
